--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@ hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
 last = log -1 HEAD --stat
 list = config --global -l
 del = branch -D
-short = log --pretty=format:'%C(yellow)%h %ad%Cred%d %Creset%s%Cblue [%cn]' --decorate --date=short 
+short = log --pretty=format:'%C(yellow)%h %ad%Cred%d %Creset%s%Cblue [%cn]' --decorate --date=short
+oneline = log --oneline --all --graph
 type = cat-file -t
 dump = cat-file -p
